--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.15.2
 scikit-image==0.14.0
-torch
-torchvision
+# torch
+# torchvision
 pillow==8.1.1
-opencv-python
-paddlepaddle
-paddlehub
-gradio
+# opencv-python
+# paddlepaddle
+# paddlehub
+# gradio
